Fixed text color of pbList.css in dark mode.

--- a/pbList/scss/04_prettify.scss
+++ b/pbList/scss/04_prettify.scss
@@ -80,7 +80,7 @@
         color : #6A9955;
     }
     .pbList-syb {
-        color : #DCDCAA;
+        color : #d8ae14;
     }
     .pbList-strsp {
         background-color : #443838;
@@ -108,7 +108,7 @@
             background-color : #6A9955;
         }
         .pbList-syb {
-            background-color : #DCDCAA;
+            background-color : #d8ae14;
         } 
     }
 }
